Use ktor for LoxoneWebSocketIT mock server